@@ -2,9 +2,10 @@ h1. CHANGELOG
 
 h3. 3.0.0 unreleased
 
+* support Pundit for authorization with OmniAuth
 * add 'pages' recipe
-* replace recipes 'model, view, controller' with recipes 'devise, omniauth, pundit'
 * remove 'starter_app' option (replaced by 'pages' recipe)
+* replace recipes 'model, view, controller' with recipes 'devise, omniauth, pundit'
 * remove 'testing' recipe (partly replaced by 'tests4' recipe)
 * remove options for Rails 3.2 example applications
 * remove MongoDB option from database choices
